# interactive-feedback-mcp

./: .gitignore  LICENSE  README.md  feedback_ui.py  pyproject.toml  server.py
